# congress_ai_agent

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  railway.toml
alembic/: env.py
alembic/versions/: ca7a0ac27660_initial.py
app/agent/: context_builder.py  orchestrator.py  prompts.py  tools.py
app/api/: main.py  middleware.py
app/api/routes/: webhook.py
app/bot/: formatter.py  handlers.py  router.py
app/core/: config.py  database.py  logging.py
app/jobs/: daily_digest.py  scheduler.py
app/models/: __init__.py  base.py  company.py  conference.py  conversation.py  interaction.py  meeting.py  note.py  opportunity.py  person.py  task.py
app/repositories/: base.py  company_repo.py  interaction_repo.py  opportunity_repo.py  person_repo.py  task_repo.py
app/schemas/: company.py  conference.py  interaction.py  meeting.py  opportunity.py  person.py  task.py
app/services/: digest.py  enrichment.py  followup.py  search.py  transcription.py
docker/: entrypoint.sh  init.sql
scripts/: batch_enrich.py  export_crm.py  seed_conference.py
tests/: conftest.py
